--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-         
-    <title>Espaço da Beleza</title>
-    <style>
-      body{
-        background: #000;
-      }
-    </style>
-  </head>
-  <body >
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Espaço da Beleza</title>
+  <style>
+    body {
+      background: #000;
+      display: flex;
+      flex-flow: column;
+      justify-items: center;
+      align-items: center;
+      
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
